# advent-of-code-2020

./: Cargo.toml  README.md
script/: gen-day
src/: main.rs  runners.rs
src/runners/: common.rs  coords.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  grid.rs
