[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Michelle Tilley <michelle@michelletilley.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"
strum = "0.20.0"
strum_macros = "0.20.1"
hashbrown = "0.9.1"
