[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Michelle Tilley <michelle@michelletilley.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
regex = "1.5.5"
lazy_static = "1.4.0"
strum = "0.20.0"
strum_macros = "0.20.1"
hashbrown = "0.9.1"
indoc = "1.0"
